<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">FindMyMovie</string>
    <string name="below_title">The movie search App</string>
    <string name="search_button">Search movie</string>
    <string name="watchlist_button">WatchList</string>
    <string name="title_search">Title</string>
    <string name="genre_search">Genre</string>
    <string name="rating_search">Rating</string>
    <string name="search">Search</string>
    <string name="titleEx">e.g. Titanic</string>
    <string name="genreEx">e.g. Comedy</string>
    <string name="add_button">Add to WatchList</string>
    <string name="detailGenre">Genre:</string>
    <string name="detailYear">Year:</string>
    <string name="detailRating">Rating:</string>
     <string name="minRating">minimal Rating:</string>
    <string name="detailDescription">Description:</string>
    <string name="button_discover">Discover new Movies</string>
    <string name="button_filmographie">Search for an Actor</string>
    <string name="button_keywords">Keyword</string>
    <string name="genre_prompt">Choose a genre</string>
    <string name="keyword_search">Search for keywords!</string>
    <string name="person_search">Get the filmographie of an Actor!</string>
    <string name="discover_search">Search for genre, rating and release date!</string>
    <string name="title_search_text">Search for a specific title!</string>
    <string name="choose_search">How do u want to search?</string>
    <string name="year">Year</string>
    <string name="rating_zero">0.0</string>
    <string name="year_example">e.g. 2010</string>
    <string name="popular">Only search for popular Movies?</string>

    <string name="prename">First name</string>
    <string name="prename_example">e.g. Leonardo</string>
    <string name="lastname">Last name</string>
    <string name="lastname_example">e.g. DiCaprio</string>
    <string name="keyword_example">e.g. Moon</string>
    
    <string-array name="genre_arrays">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Disaster</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Eastern</item>
        <item>Erotic</item>
        <item>Family</item>
        <item>Fan Film</item>
        <item>Fantasy</item>
        <item>Film Noir</item>
        <item>Foreign</item>
        <item>History</item>
        <item>Holiday</item>
        <item>Horror</item>
        <item>Indie</item>
        <item>Music</item>
        <item>Musical</item>
        <item>Mystery</item>
        <item>Neo-noir</item>
        <item>Road Movie</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>Short</item>
        <item>Sport</item>
        <item>Sporting Event</item>
        <item>Sports Film</item>
        <item>Suspense</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <integer-array name="genre_ids">
        <item>28</item>
        <item>12</item>
        <item>16</item>
        <item>35</item>
        <item>80</item>
        <item>105</item>
        <item>99</item>
        <item>18</item>
        <item>82</item>
        <item>2916</item>
        <item>10751</item>
        <item>10750</item>
        <item>14</item>
        <item>10753</item>
        <item>10769</item>
        <item>36</item>
        <item>10595</item>
        <item>27</item>
        <item>10756</item>
        <item>10402</item>
        <item>22</item>
        <item>9648</item>
        <item>10754</item>
        <item>1115</item>
        <item>10749</item>
        <item>878</item>
        <item>10755</item>
        <item>9805</item>
        <item>10758</item>
        <item>10757</item>
        <item>10748</item>
        <item>10770</item>
        <item>53</item>
        <item>10752</item>
        <item>37</item>
    </integer-array>

</resources>