<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.movieapp.StartActivity" >

        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/detailGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detailTitle"
            android:layout_alignStart="@+id/detailTitle"
            android:layout_below="@+id/detailTitle"
            android:layout_marginTop="40dp"
            android:text="@string/detailGenre"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/detailYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/detailGenre"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/detailGenre"
            android:layout_below="@+id/detailGenre"
            android:layout_marginTop="10dp"
            android:text="@string/detailYear"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/detailGenreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/detailGenre"
            android:layout_alignLeft="@+id/webView1"
            android:layout_alignStart="@+id/webView1"
            android:layout_marginLeft="46dp"
            android:layout_marginStart="46dp"
            android:text=""
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/detailYearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/detailYear"
            android:layout_alignEnd="@+id/detailGenreText"
            android:layout_alignRight="@+id/detailGenreText"
            android:text=""
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/detailRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailYear"
            android:layout_marginTop="10dp"
            android:text="@string/detailRating"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/detailRatingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/detailRating"
            android:layout_alignEnd="@+id/detailYearText"
            android:layout_alignRight="@+id/detailYearText"
            android:text=""
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/detailDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detailDescription"
            android:layout_alignStart="@+id/detailDescription"
            android:layout_below="@+id/detailDescription"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text=""
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detailRating"
            android:layout_alignStart="@+id/detailRating"
            android:layout_below="@+id/detailRating"
            android:layout_marginTop="10dp"
            android:text="@string/detailDescription"
            android:textColor="@android:color/white" />

        <WebView
            android:id="@+id/webView1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/youtube_view"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/detailRating"
            android:layout_toRightOf="@+id/detailRating" />

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youtube_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detailDescriptionText"
            android:layout_alignRight="@+id/button1"
            android:layout_below="@+id/detailDescriptionText"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/detailRating" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/title"
            android:background="@layout/grey_button"
            android:maxLines="1"
            android:text="@string/add_button"
            android:textSize="12sp" />
    </RelativeLayout>

</ScrollView>